--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,29 @@
+body{
+    background-color: #9772BC;
+    
+}
 .logo{
-	width: 400px;
-	height:150px;
+	width: 700px;
+	height: 200px;
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
 }
-
-.navigation{
+.navigation{    
 	list-style: none;
 	display: inline;
+    border-style: solid;
+    border-width: 1px;
+    width: 700px;
+    padding: 5px;
+    margin-left: auto;
+    margin-right: auto; 
+    display: block;
+}
+
+li{
+    display: inline;
+    text-transform: uppercase;
+    color:white;
+    padding: 4.5%;
 }
